# nethack-rs

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  SESSION.md  TODOs.md
crates/nethack-data/: Cargo.toml
crates/nethack-data/src/: des_lexer.rs  des_parser.rs  dungeon_parser.rs  lev_reader.rs  lib.rs  monsters.rs  objects.rs
crates/nethack-data/tests/: compare_lev.rs  parse_all.rs
crates/nethack-data/tests/fixtures/lev/: Arc-fila.lev  Arc-filb.lev  Arc-goal.lev  Arc-loca.lev  Arc-strt.lev  Bar-fila.lev  Bar-filb.lev  Bar-goal.lev  Bar-loca.lev  Bar-strt.lev  Cav-fila.lev  Cav-filb.lev  Cav-goal.lev  Cav-loca.lev  Cav-strt.lev  Hea-fila.lev  Hea-filb.lev  Hea-goal.lev  Hea-loca.lev  Hea-strt.lev  Kni-fila.lev  Kni-filb.lev  Kni-goal.lev  Kni-loca.lev  Kni-strt.lev  Mon-fila.lev  Mon-filb.lev  Mon-goal.lev  Mon-loca.lev  Mon-strt.lev  Pri-fila.lev  Pri-filb.lev  Pri-goal.lev  Pri-loca.lev  Pri-strt.lev  Ran-fila.lev  Ran-filb.lev  Ran-goal.lev  Ran-loca.lev  Ran-strt.lev  (+79 more)
crates/nethack-rng/: Cargo.toml
crates/nethack-rng/src/: isaac64.rs  lib.rs
crates/nethack-types/: Cargo.toml
crates/nethack-types/src/: alignment.rs  armor_type.rs  attack.rs  attack_struct.rs  color.rs  door_state.rs  dungeon.rs  geno.rs  lib.rs  location_type.rs  material.rs  monster_class.rs  monster_flags.rs  monster_id.rs  monster_size.rs  monster_sound.rs  monster_type.rs  object_class.rs  object_id.rs  object_type.rs  property.rs  resistance.rs  role.rs  sp_lev.rs  worn.rs
docs/: nethack-c-architecture.md  nethack-doc  phase1-plan.md  phase2-plan.md  porting-plan.md
src/: main.rs
tools/: extract_data.py  isaac64_ref.c
