[package]
name = "nethack-rs"
version = "0.1.0"
edition = "2024"
description = "A rewrite of the classic nethack game in Rust"
authors = ["Ray Suliteanu <raysuliteanu@proton.me>"]
keywords = ["tui", "game"]
categories = ["games"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = [
    "cargo",
    "derive",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = { version = "0.15.6", default-features = false, features = ["toml"] }
env_logger = "0.11.6"
log = "0.4.25"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.18"
