[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ray Suliteanu <raysuliteanu@proton.me>"]

[workspace.dependencies]
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
color-eyre = "0.6"
log = "0.4"
env_logger = "0.11"
rand_isaac = "0.5"
rand_core = "0.10"

nethack-types = { path = "crates/nethack-types" }
nethack-data = { path = "crates/nethack-data" }
nethack-rng = { path = "crates/nethack-rng" }

[package]
name = "nethack-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A rewrite of the classic nethack game in Rust"
keywords = ["tui", "game"]
categories = ["games"]

[dependencies]
clap = { version = "4", features = [
    "cargo",
    "derive",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre.workspace = true
config = { version = "0.15", default-features = false, features = ["toml"] }
env_logger.workspace = true
log.workspace = true
nethack-types.workspace = true
nethack-data.workspace = true
nethack-rng.workspace = true
